# LlamaLanguage

./: New_French_Words_20250331_112701_20250331_112701.apkg  New_French_Words_20250331_112701_20250331_112701.json  New_Spanish_Words_20250331_075554_20250331_075554.apkg  New_Spanish_Words_20250331_075554_20250331_075554.json  New_Spanish_Words_20250331_075655_20250331_075655.apkg  New_Spanish_Words_20250331_075655_20250331_075655.json  New_Spanish_Words_20250331_091259_20250331_091259.json  New_Spanish_Words_20250331_110633_20250331_110633.json  New_Spanish_Words_20250331_120355_20250331_120355.apkg  New_Spanish_Words_20250331_120424_20250331_120424.apkg  New_Spanish_Words_20250331_120424_20250331_120424.json  New_Spanish_Words_20250331_121544_20250331_121544.apkg  New_Spanish_Words_20250331_121555_20250331_121555.apkg  New_Spanish_Words_20250331_121600_20250331_121600.apkg  New_Spanish_Words_20250331_121602_20250331_121602.apkg  New_Spanish_Words_20250331_121701_20250331_121701.apkg  New_Spanish_Words_20250331_122427_20250331_122427.apkg  Rowling__J__K_____Harry_Potter_y_la_piedra_filosofal_French_words_20250331_112803.csv  Rowling__J__K_____Harry_Potter_y_la_piedra_filosofal_Spanish_words_20250331_110808.csv  anki_config_French_20250331_112803.json  anki_config_Spanish_20250331_110808.json  anki_manager.py  app.py  audio_generator.py  csv_exporter.py  deck_storage.py  download_models.py  example_deck.json  gcloud_tts.py  local_script_integration.py  nlp_processor.py  pdf_processor.py  pyproject.toml  sonnet_translator.py  utils.py
.streamlit/: config.toml
